# PaperSourceCodesBackup

./: 99A-S2-S2-20200410qr.blend  README.md
1nbvDisplayOK/: README.md  cameraTest.blend
1nbvDisplayOK/bunny_20200427/: Bunnyresult2020-04-2819:42:47.ply  detalInformation.txt  logs.md  planViews20200427132449.txt
1nbvDisplayOK/tank_20200611/: planViews20200611200247.txt
2possionReconstruction20200428-ok/bunny/: autobuild.sh  bunny32497.pcd  main
2possionReconstruction20200428-ok/tankT99A/: Bunnyresult2020-05-1708:31:59.ply  autobuild.sh  main  possionReconstruction20200517.cpp
3precissionTest-ok/: README.md  precissionTest.blend  pt.igs  test  test00000.pcd  test_noisy00000.pcd
4BSpline20200609/: CMakeLists.txt  README.md  vox-Tank1-T99A-20200525-06:52:14.pcd  vox-Tank1-T99A002-20200525-06:52:14.xyz
5fpfh20200530/: CMakeLists.txt  fpfh20200529.cpp
Figures/extraModels/: Display-99A-5frame-20200621.blend  Display-99A-5viewers-20200610.blend  README.md  plan.txt
ideasDrop/: processLaserFrom0410.cpp
nbvDisplay/: nbv1Pre.py  nbv2Blender.py
otherPieces/: Normals.cpp  possionReconstruction20200428.cpp
s1qrStructurePointCloudSimulation/: 00-logs  4-Display-FinalDisplay-99A-20200324qr-VeryGood1DonotClick.blend  AutoLaserScan3D-ALL3-20200401qr.py  AutoLaserScan3Dqr20200401.py  CMakeLists.txt  README.md  autobuild.sh  processLaserFrom0410.cpp
s2SprayModelGeneration-qr0415/: CMakeLists.txt  rgsqr20200413-0506.cpp  rgsqr20200413.cpp
s3Registration-qr0524/: CMakeLists.txt  autobuild.sh
sprayModel-20200508/: 99A-Split2-20200508.blend  99A-Split2-20200508.mtl  99A-Split2-20200508.stl  README.md
step01-StructurePointCloudSimulation/: processLaserFrom0410.cpp
(+5 files in other folders)
